--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,3 @@
-@font-face {
-  font-family: "Work Sans", sans-serif;
-  src: local(WorkSans), url(./fonts/WorkSans-Regular.ttf) format("truetype");
-  font-weight: 400;
-}
-@font-face {
-  font-family: "Work Sans", sans-serif;
-  src: local(WorkSans), url(./fonts/WorkSans-Light.ttf) format("truetype");
-  font-weight: 300;
-}
-@font-face {
-  font-family: "Work Sans", sans-serif;
-  src: local(WorkSans), url(./fonts/WorkSans-ExtraLight.ttf) format("truetype");
-  font-weight: 200;
-}
-
 /*
 =============== 
 Variables
@@ -57,6 +41,7 @@ Variables
   --max-width: 1170px;
   --fixed-width: 700px;
 }
+
 /*
 =============== 
 Global Styles
@@ -108,7 +93,7 @@ h4 {
   font-size: 0.875rem;
 }
 p {
-  margin-bottom: 1.25rem;
+  //margin-bottom: 1.25rem;
   color: var(--clr-grey-3);
 }
 @media screen and (min-width: 800px) {
@@ -194,11 +179,9 @@ p {
 .bg-grey {
   background: var(--clr-grey-10);
 }
-/* page links */
 
 /* social links */
 .social-links {
-  margin-top: 2rem;
   width: 15rem;
   display: flex;
   justify-content: space-between;
@@ -290,296 +273,7 @@ Navbar
     background: transparent;
   }
 }
-/*
-=============== 
-Sidebar
-===============
-*/
-.sidebar {
-  background: var(--clr-grey-10);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  display: grid;
-  place-items: center;
-  opacity: 0;
-  transition: var(--transition);
-  transform: translateX(-100%);
-}
-.show-sidebar {
-  opacity: 1;
-  transform: translateX(0);
-}
-.sidebar-links li {
-  opacity: 0;
-}
-.sidebar-links li a {
-  display: block;
-  text-align: center;
-  text-transform: capitalize;
-  color: var(--clr-grey-5);
-  letter-spacing: var(--spacing);
-  margin-bottom: 0.5rem;
-  font-size: 2rem;
-  transition: var(--transition);
-  border-radius: var(--radius);
-}
-.sidebar-links li a:hover {
-  background: var(--clr-primary-9);
-  color: var(--clr-primary-5);
-}
-.close-btn {
-  position: absolute;
-  right: 4.75%;
-  top: 2.75%;
-  font-size: 2.5rem;
-  background: transparent;
-  border-color: transparent;
-  color: var(--clr-red-dark);
-  cursor: pointer;
-}
-@media screen and (min-width: 992px) {
-  .sidebar {
-    transform: translateX(-100%);
-  }
-}
-/*
-=============== 
-Sidebar Animation
-===============
-*/
-.sidebar-links li {
-  animation: slideRight 0.5s ease-in-out 0.3s forwards;
-}
-.sidebar-links li:nth-of-type(1) {
-  animation-delay: 0.25s;
-}
-.sidebar-links li:nth-of-type(2) {
-  animation-delay: 0.5s;
-}
-.sidebar-links li:nth-of-type(3) {
-  animation-delay: 0.75s;
-}
-.sidebar-links li:nth-of-type(4) {
-  animation-delay: 1s;
-}
-.sidebar-links li:nth-of-type(5) {
-  animation-delay: 1.25s;
-}
-@keyframes slideRight {
-  0% {
-    transform: translateX(-200px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-.sidebar-icons li {
-  opacity: 0;
-  animation: slideUp 0.5s ease-in-out 0.3s forwards;
-}
-.sidebar-icons li:nth-of-type(1) {
-  animation-delay: 0.25s;
-}
-.sidebar-icons li:nth-of-type(2) {
-  animation-delay: 0.5s;
-}
-.sidebar-icons li:nth-of-type(3) {
-  animation-delay: 0.75s;
-}
-.sidebar-icons li:nth-of-type(4) {
-  animation-delay: 1s;
-}
-.sidebar-icons li:nth-of-type(5) {
-  animation-delay: 1.25s;
-}
-@keyframes slideUp {
-  0% {
-    transform: translateY(200px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 
-/*
-=============== 
-Services
-===============
-*/
-.service {
-  background: var(--clr-white);
-  padding: 3rem 1.5rem;
-  margin-bottom: 2rem;
-  border-radius: var(--radius);
-  text-align: center;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-.service-icon {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-}
-.service .underline {
-  width: 3rem;
-  height: 0.12rem;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-.service p {
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-.service:hover {
-  background: var(--clr-primary-5);
-  color: var(--clr-primary-9);
-}
-.service:hover p {
-  color: var(--clr-primary-9);
-}
-.service:hover .underline {
-  background: var(--clr-primary-9);
-}
-@media screen and (min-width: 676px) {
-  .services-center {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    -webkit-column-gap: 2rem;
-    -moz-column-gap: 2rem;
-    column-gap: 2rem;
-  }
-}
-@media screen and (min-width: 992px) {
-  .services-center {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-/*
-=============== 
-Jobs
-===============
-*/
-
-.jobs-center {
-  width: 80vw;
-  margin: 0 auto;
-  max-width: var(--max-width);
-}
-.btn-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 4rem;
-}
-.job-btn {
-  background: transparent;
-  border-color: transparent;
-  text-transform: capitalize;
-  font-size: 1.25rem;
-  letter-spacing: var(--spacing);
-  margin: 0 0.5rem;
-  transition: var(--transition);
-  cursor: pointer;
-  padding: 0.25rem 0;
-  line-height: 1;
-}
-.job-btn:hover {
-  color: var(--clr-primary-5);
-  box-shadow: 0 2px var(--clr-primary-5);
-}
-.active-btn {
-  color: var(--clr-primary-5);
-  box-shadow: 0 2px var(--clr-primary-5);
-}
-
-.job-info h3 {
-  font-weight: 400;
-}
-.job-info h4 {
-  text-transform: uppercase;
-  color: var(--clr-grey-5);
-  background: var(--clr-grey-9);
-  display: inline-block;
-  padding: 0.375rem 0.75rem;
-  border-radius: var(--radius);
-}
-.job-date {
-  letter-spacing: var(--spacing);
-}
-.job-desc {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 2rem;
-  align-items: center;
-  margin-bottom: 1.25rem;
-}
-.job-desc p {
-  margin-bottom: 0;
-  color: var(--clr-grey-3);
-}
-.job-icon {
-  color: var(--clr-primary-5);
-}
-@media screen and (min-width: 992px) {
-  .jobs-center {
-    width: 90vw;
-    display: grid;
-    grid-template-columns: 200px 1fr;
-    column-gap: 4rem;
-  }
-  .btn-container {
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  .job-btn {
-    margin-bottom: 1rem;
-  }
-  .active-btn {
-    box-shadow: -2px 0 var(--clr-primary-5);
-  }
-  .job-btn:hover {
-    box-shadow: -2px 0 var(--clr-primary-5);
-  }
-}
-
-/*
-===============
-Footer
-===============
-*/
-.footer {
-  height: 9rem;
-  background: #222;
-  text-align: center;
-  display: grid;
-  place-items: center;
-}
-.footer h4 {
-  margin-top: 0.5rem;
-  color: var(--clr-white);
-  font-weight: normal;
-  text-transform: uppercase;
-}
-.footer h4 span {
-  color: var(--clr-primary-5);
-}
-.footer-links {
-  margin: 0 auto 1rem auto;
-}
-.footer .social-link {
-  color: var(--clr-white);
-}
-.footer .social-link:hover {
-  color: var(--clr-primary-5);
-}
 /*
 ===============
 Pages
@@ -592,180 +286,5 @@ Pages
 .about-page,
 .contact-page {
   background: var(--clr-grey-10);
-  min-height: calc(100vh - 5rem - 9rem);
-}
-.error-page {
-  display: grid;
-  place-items: center;
-  background: var(--clr-primary-10);
-  text-align: center;
-}
-.error-page h1 {
-  text-transform: uppercase;
-  color: var(--clr-primary-1);
-  margin-bottom: 2rem;
-}
-/*
-===============
-Blog Page
-===============
-*/
-.blog-page .blog {
-  background: var(--clr-white);
-}
-/*
-===============
-About Page
-===============
-*/
-.about-page {
-  padding: 7rem 0;
-}
-.about-img {
-  margin-bottom: 2rem;
-  height: 25rem;
-}
-.about-text .section-title {
-  margin-bottom: 2rem;
-  text-align: left;
-}
-.about-text .underline {
-  margin-left: 0;
-  margin-right: 0;
-}
-.about-text p {
-  line-height: 2;
-}
-.stack-container {
-  width: 30rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  row-gap: 0.5rem;
-}
-.stack-container span {
-  text-transform: uppercase;
-  display: flex;
-  align-items: center;
-  letter-spacing: 1px;
-  color: var(--clr-grey-4);
-}
-.stack-icon {
-  color: var(--clr-primary-5);
-  margin-right: 0.25rem;
-  font-size: 1rem;
-}
-@media screen and (min-width: 992px) {
-  .about-center {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    align-items: center;
-    column-gap: 4rem;
-  }
-  .about-img {
-    grid-column: 1 / span 5;
-    margin-bottom: 0;
-  }
-  .about-text {
-    grid-column: 6 / -1;
-  }
-}
-/*
-===============
-Contact Page
-===============
-*/
-.contact-page {
-  display: grid;
-  place-items: center;
-  padding: 5rem 0;
-}
-.contact-form {
-  background: var(--clr-white);
-  border-radius: var(--radius);
-  text-align: center;
-  box-shadow: var(--light-shadow);
-  transition: var(--transition);
-  width: 90vw;
-  max-width: 35rem;
-}
-.contact-form:hover {
-  box-shadow: var(--dark-shadow);
-}
-.contact-form h3 {
-  padding-top: 1.25rem;
-  color: var(--clr-grey-5);
-}
-.form-group {
-  padding: 1rem 1.5rem;
-}
-.form-control {
-  display: block;
-  width: 100%;
-  padding: 0.75rem 1rem;
-  border: none;
-  margin-bottom: 1.25rem;
-  background: var(--clr-grey-10);
-  border-radius: var(--radius);
-  text-transform: uppercase;
-  letter-spacing: var(--spacing);
-}
-.form-control::placeholder {
-  font-family: var(--ff-primary);
-  color: var(--clr-grey-1);
-  text-transform: uppercase;
-  letter-spacing: var(--spacing);
-}
-.submit-btn {
-  display: block;
-  width: 100%;
-  padding: 1rem;
-  border-bottom-left-radius: var(--radius);
-  border-bottom-right-radius: var(--radius);
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
-}
-/*
-===============
-Blog Template
-===============
-*/
-.blog-template {
-  padding: 5rem 0;
-}
-
-.blog-template h1,
-.blog-template h2 {
-  text-align: center;
-}
-.blog-template ul {
-  margin-top: 2rem;
-  display: inline-block;
-}
-.blog-template ul li {
-  background: var(--clr-grey-9);
-  color: var(--clr-grey-5);
-  padding: 0.5rem 1rem;
-  margin: 1rem 0;
-  text-transform: uppercase;
-}
-
-.blog-template blockquote {
-  background: var(--clr-primary-9);
-  border-radius: var(--radius);
-  padding: 1rem;
-  line-height: 2;
-  color: var(--clr-primary-5);
-  margin: 2rem 0;
-}
-.blog-template pre {
-  background: #222;
-  color: yellow;
-  overflow-x: scroll;
-  padding: 1rem 1.5rem;
-  border-radius: var(--radius);
-}
-.blog-template img {
-  width: 15rem;
-  height: 15rem;
-  margin: 3rem 0;
+  min-height: calc(100vh - 5rem - 6.2rem);
 }
