--- a/src/components/Projects/Project/Project.css
+++ b/src/components/Projects/Project/Project.css
@@ -6,26 +6,25 @@ Variables
 :root {
   /* dark shades of primary color*/
   /* --clr-primary-1: hsl(43, 86%, 17%); */
-  --clr-primary-1: hsl(184, 91%, 17%);
-  --clr-primary-2: hsl(185, 84%, 25%);
+  --clr-primary-1: hsl(31, 90%, 74%);
+  --clr-primary-2: hsl(204, 100%, 21%);
   --clr-primary-3: hsl(185, 81%, 29%);
   --clr-primary-4: hsl(184, 77%, 34%);
   --clr-primary-5: #2caeba;
   /* lighter shades of primary color */
-  --clr-primary-6: hsl(185, 57%, 50%);
-  --clr-primary-7: hsl(184, 65%, 59%);
-  --clr-primary-8: hsl(184, 80%, 74%);
-  --clr-primary-9: hsl(185, 94%, 87%);
-  --clr-primary-10: hsl(186, 100%, 94%);
+  --clr-primary-6: hsl(31, 90%, 74%);
+  --clr-primary-7: hsl(31, 90%, 74%);
+  --clr-primary-8: hsl(31, 90%, 74%);
+  --clr-primary-9: hsl(31, 90%, 74%);
+  --clr-primary-1: hsl(31, 90%, 74%);
   /* darkest grey - used for headings */
   --clr-grey-1: hsl(209, 61%, 16%);
   --clr-grey-3: hsl(209, 34%, 30%);
   --clr-grey-4: hsl(209, 28%, 39%);
   /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-grey-5: hsl(51, 57%, 91%);
+  --clr-grey-8: hsl(51, 57%, 91%);
+  --clr-grey-10: hsl(51, 57%, 91%);
   --clr-green-dark: hsl(125, 67%, 35%);
   --clr-red-dark: hsl(360, 67%, 44%);
   --clr-red-light: hsl(360, 71%, 66%);
@@ -337,4 +336,162 @@ Pages
   background: var(--clr-grey-10);
   min-height: calc(100vh - 5rem - 6.2rem);
 }
-/*# sourceMappingURL=App.css.map */
+
+.projects {
+  background: var(--clr-grey-10);
+}
+
+.project {
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  margin-bottom: 4rem;
+}
+
+.project-img {
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+  height: 19rem;
+  z-index: 0;
+}
+
+.project-info {
+  background: var(--clr-white);
+  opacity: 0.95;
+  padding: 1rem 2rem;
+  border-bottom-left-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+}
+
+.project-number {
+  display: inline-block;
+  font-size: 1.25rem;
+  color: var(--clr-primary-5);
+  margin-bottom: 0.75rem;
+}
+
+.project-info h3 {
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+  font-size: 1.5rem;
+}
+
+.project-desc {
+  color: var(--clr-grey-3);
+}
+
+.project-stack {
+  margin-bottom: 1rem;
+}
+
+.project-stack span,
+.about-stack span {
+  display: inline-block;
+  background: var(--clr-grey-9);
+  color: var(--clr-grey-5);
+  margin-right: 0.5rem;
+  margin-bottom: 0.25rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: var(--radius);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 0.85rem;
+}
+
+.about-stack span {
+  margin-top: 0.5rem;
+}
+
+.project-icon {
+  color: var(--clr-primary-5);
+  font-size: 1.25rem;
+  margin-right: 0.5rem;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.project-icon:hover {
+  color: var(--clr-primary-1);
+}
+
+@media screen and (min-width: 576px) {
+  .project-img {
+    height: 19rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project-img {
+    height: 22rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .project {
+    -ms-grid-columns: (1fr)[12];
+        grid-template-columns: repeat(12, 1fr);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .project-img {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 8;
+    grid-column: 1 / span 8;
+    /* grid-column-end: 8; */
+    -ms-grid-row: 1;
+    grid-row: 1 / 1;
+    height: 30rem;
+    border-radius: var(--radius);
+    -webkit-box-shadow: var(--dark-shadow);
+            box-shadow: var(--dark-shadow);
+  }
+  .project-info {
+    border-radius: var(--radius);
+    -webkit-box-shadow: var(--dark-shadow);
+            box-shadow: var(--dark-shadow);
+    z-index: 2;
+    -ms-grid-column: 7;
+    -ms-grid-column-span: 5;
+    grid-column: 7 /12;
+    -ms-grid-row: 1;
+    grid-row: 1 / 1;
+    -webkit-transition: 2s;
+    transition: 2s;
+  }
+  .project:nth-of-type(odd) .project-img {
+    grid-column: 5 / -1;
+    -ms-grid-row: 1;
+    grid-row: 1 / 1;
+  }
+  .project:nth-of-type(odd) .project-info {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 5;
+    grid-column: 2 / span 5;
+    -ms-grid-row: 1;
+    grid-row: 1 / 1;
+    text-align: left;
+    -webkit-transition: 2s;
+    transition: 2s;
+  }
+}
+
+.project-img-overlay {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, right bottom, from(var(--clr-primary-5)), to(#222));
+  background: linear-gradient(to bottom right, var(--clr-primary-5), #222);
+  opacity: 0.7;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+  z-index: 1;
+}
+
+.project:hover .project-img-overlay {
+  opacity: 0;
+}
+/*# sourceMappingURL=Project.css.map */
