--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -6,26 +6,25 @@ Variables
 :root {
   /* dark shades of primary color*/
   /* --clr-primary-1: hsl(43, 86%, 17%); */
-  --clr-primary-1: hsl(184, 91%, 17%);
-  --clr-primary-2: hsl(185, 84%, 25%);
+  --clr-primary-1: hsl(31, 90%, 74%);
+  --clr-primary-2: hsl(204, 100%, 21%);
   --clr-primary-3: hsl(185, 81%, 29%);
   --clr-primary-4: hsl(184, 77%, 34%);
   --clr-primary-5: #2caeba;
   /* lighter shades of primary color */
-  --clr-primary-6: hsl(185, 57%, 50%);
-  --clr-primary-7: hsl(184, 65%, 59%);
-  --clr-primary-8: hsl(184, 80%, 74%);
-  --clr-primary-9: hsl(185, 94%, 87%);
-  --clr-primary-10: hsl(186, 100%, 94%);
+  --clr-primary-6: hsl(31, 90%, 74%);
+  --clr-primary-7: hsl(31, 90%, 74%);
+  --clr-primary-8: hsl(31, 90%, 74%);
+  --clr-primary-9: hsl(31, 90%, 74%);
+  --clr-primary-1: hsl(31, 90%, 74%);
   /* darkest grey - used for headings */
   --clr-grey-1: hsl(209, 61%, 16%);
   --clr-grey-3: hsl(209, 34%, 30%);
   --clr-grey-4: hsl(209, 28%, 39%);
   /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-grey-5: hsl(51, 57%, 91%);
+  --clr-grey-8: hsl(51, 57%, 91%);
+  --clr-grey-10: hsl(51, 57%, 91%);
   --clr-green-dark: hsl(125, 67%, 35%);
   --clr-red-dark: hsl(360, 67%, 44%);
   --clr-red-light: hsl(360, 71%, 66%);
@@ -337,4 +336,14 @@ Pages
   background: var(--clr-grey-10);
   min-height: calc(100vh - 5rem - 6.2rem);
 }
-/*# sourceMappingURL=App.css.map */
+
+.project-container {
+  min-height: 2000px;
+  padding-top: 100px;
+  padding-left: 80px;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 200;
+  background-color: white;
+  z-index: 2;
+}
+/*# sourceMappingURL=Projects.css.map */
