responsive project-styling

--- a/src/components/Projects/Project/Project.scss
+++ b/src/components/Projects/Project/Project.scss
@@ -13,6 +13,8 @@
   border-top-right-radius: var(--radius);
   height: 19rem;
   z-index: 0;
+  object-fit: cover;
+  width: 100%;
 }
 
 .project-info {
