--- a/src/components/Projects/Project/Project.scss
+++ b/src/components/Projects/Project/Project.scss
@@ -8,6 +8,11 @@
   display: grid;
   margin-bottom: 4rem;
 }
+
+.image-wrapper {
+  position: relative;
+  overflow: hidden;
+}
 .project-img {
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
@@ -81,6 +86,7 @@
     grid-template-columns: repeat(12, 1fr);
     align-items: center;
   }
+
   .project-img {
     grid-column: 1 / span 8;
     /* grid-column-end: 8; */
