--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -44,6 +44,7 @@
   .about-img {
     grid-column: 1 / span 5;
     margin-bottom: 0;
+    border-radius: 20px;
   }
   .about-text {
     grid-column: 6 / -1;
