fixed contact form

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -48,3 +48,8 @@
   border-top-right-radius: 0;
   border-top-left-radius: 0;
 }
+
+.sent-message {
+  color: var(--clr-grey-5);
+  font-size: 1.2rem;
+}
